Lenke til personvern
close #86

--- a/twig/Personvern/tilpass.html.twig
+++ b/twig/Personvern/tilpass.html.twig
@@ -31,3 +31,14 @@
         {% endembed %}
     </div>
 </div>
+
+<div class="row mt-4 mb-0">
+<div class="col-12 col-sm-8">
+    <div class="alert alert-info">
+        Rapporten viser alle som ikke vil bli tatt bilde av eller filmet. 
+        Hvis noen har ombestemt seg og vil bli fjernet fra denne listen,
+        må du trykke "send ny mulighet til samtykke" fra
+        <a href="?page=UKMdeltakere_personvern">personvern-oversikten</a>.
+    </div>
+</div>
+</div>
