Fix #60 - men ikke like elegant som resten av templateSaver

--- a/twig/Components/templateSaver.html.twig
+++ b/twig/Components/templateSaver.html.twig
@@ -15,7 +15,7 @@
                 <label>Beskrivelse
                     <span class="text-muted">(frivillig)</span>
                 </label>
-                <textarea name="beskrivelse" class="form-control"></textarea>
+                <textarea id="saveTemplateBeskrivelse" name="beskrivelse" class="form-control"></textarea>
             </div>
 
             <input type="text" name="config" id="templateConfig"/>
@@ -32,3 +32,4 @@
         </div>
     </div>
 </div>
+
