--- a/twig/rapporter.html.twig
+++ b/twig/rapporter.html.twig
@@ -1,9 +1,35 @@
-<h1>Rapporter</h1>
-
-
 <div class="container-fluid">
+	<div class="row">
+		<div class="col-xs-12 col-md-12 col-lg-12 col-xl-12 ">
+			{% if aktivt_senter == 'bruker' %}
+				<h1>Rapporter tilknyttet din bruker / område</h1>
 
-	{% for kategori in kategorier|filter( kategori => kategori.harRapporter() )%}
+                <p class="lead">
+                    De fleste rapportene er knyttet til et arrangement, og tilgjengelig fra arrangement-systemet.
+                    Velg ditt fylke eller din kommune fra menyen til venstre, og trykk deg inn på arrangementet.
+
+                    {% if current_admin.erAdmin('fylke') %}
+                        {% if current_admin.getAntallOmrader('fylke') == 1 %}
+                            Velg "<a href="?page=UKMnettverket_fylke">{{ (current_admin.getOmrader('fylke')|first).getNavn() }}</a>" i menyen til venstre, 
+                        {% else  %}
+                            Velg "Dine fylker" i menyen til venstre,
+                        {% endif %}
+                    {% elseif current_admin.erAdmin('kommune') %}
+                        {% if current_admin.getAntallOmrader('kommune') == 1 %}
+                            Velg "<a href="?page=UKMnettverket_fylke">{{ (current_admin.getOmrader('kommune')|first).getNavn() }}</a>" i menyen til venstre, 
+                        {% else  %}
+                            Velg "Dine kommuner" i menyen til venstre,
+                        {% endif %}
+                    {% endif %}
+                    og deretter trykk deg inn på arrangementet for å finne disse.
+                </p>
+			{% else %}
+                <h1>Rapporter</h1>
+			{% endif %}
+		</div>
+	</div>
+
+	{% for kategori in kategorier|filter( kategori => kategori.getSenter() == aktivt_senter and kategori.harRapporter())%}
 		<div class="row">
 			<div class="col-xs-12 col-md-12 col-lg-12 col-xl-12 ">
 				<h2>{{ kategori.getNavn() }}</h2>
