--- a/twig/Components/epost.html.twig
+++ b/twig/Components/epost.html.twig
@@ -1,6 +1,6 @@
 <a href="mailto:{{epost}}" title="{{epost}}">
 	<span style="white-space: nowrap;">
 		<span class="dashicons dashicons-email dashicons-inline"></span>
-		epost
+		{{ expand is defined and expand ? epost : 'epost' }}
 	</span>
 </a>
