Mediefiler funker i HTML
relatert #92

--- a/twig/TekniskeProver/tilpass.html.twig
+++ b/twig/TekniskeProver/tilpass.html.twig
@@ -7,19 +7,7 @@
 		<input type="hidden" name="vis_hendelse_{{ (arrangement.getProgram().getAbsoluteAll()|first).getId() }}" value="true"/>
 	{% endif %}
 	<div class="col-12 col-sm-6 col-md-4">
-		<ol class="list-group">
-			<li class="list-group-item list-group-title">
-				<h4>Om innslaget</h4>
-			</li>
-
-			{#<li class="list-group-item panel-title panel-primary">Innslaget</li>#}
-			{% include "checkbox.html.twig" with {id: 'kategori_og_sjanger', title: 'Kategori og sjanger'} %}
-			{% include "checkbox.html.twig" with {id: 'varighet', title: 'Varighet'} %}
-			{% include "checkbox.html.twig" with {id: 'fylke', title: 'Fylke'} %}
-			{% include "checkbox.html.twig" with {id: 'kommune', title: 'Kommune'} %}
-			{% include "checkbox.html.twig" with {id: 'beskrivelse', title: 'Beskrivelse'} %}
-			{% include "checkbox.html.twig" with {id: 'tekniske_behov', title: 'Tekniske behov'} %}
-		</ol>
+        {% include "AlleInnslag/Tilpass/innslag.html.twig" %}
 	</div>
 
 	<div class="col-12 col-sm-6 col-md-4">
