Mediefiler og bilder fungerer i word
Relatert #92

--- a/twig/AlleInnslag/Tilpass/innslag.html.twig
+++ b/twig/AlleInnslag/Tilpass/innslag.html.twig
@@ -10,5 +10,6 @@
 	{% include "checkbox.html.twig" with {id: 'beskrivelse', title: 'Beskrivelse'} %}
 	{% include "checkbox.html.twig" with {id: 'tekniske_behov', title: 'Tekniske behov'} %}
 	{% include "checkbox.html.twig" with {id: 'mediefiler', title: 'Mediefiler'} %}
+	{% include "checkbox.html.twig" with {id: 'bilder', title: 'Bilder'} %}
 	{% include "checkbox.html.twig" with {id: 'ukmtv', title: 'Filmer fra UKM-TV', label: 'Kun tilgjengelig på skjerm'} %}
 </ol>
