vis også sesong

--- a/twig/Kontaktpersoner/rapport.html.twig
+++ b/twig/Kontaktpersoner/rapport.html.twig
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-12 col-sm-8 col-md-7 col-lg-5 col-xl-4">
 			<h2>
-				Antall tilfeller
+				Antall tilfeller for {{ renderData.getAttr('sesong')}}
 			</h2>
 
 			<table class="table table-striped col">
