Standardskjema for arr og pers

--- a/twig/Infoskjema/tilpass.html.twig
+++ b/twig/Infoskjema/tilpass.html.twig
@@ -7,8 +7,8 @@
 
 	<script>
 		jQuery(document).ready(function () {
-jQuery('#generateButtonContainer').hide();
-});
+            jQuery('#generateButtonContainer').hide();
+        });
 	</script>
 {% else %}
 
@@ -17,7 +17,7 @@ jQuery('#generateButtonContainer').hide();
 			<div class="alert alert-info">
 				<p>
 					<b>TIPS:</b>
-					{% if arrangement.getSkjema().getAntallOverskrifter() < 2 %}
+					{% if skjema.getAntallOverskrifter() < 2 %}
 						Rapporten viser deg svarene gruppert per overskrift. 
                          Det kan være en fordel å legge til flere overskrifter i
 						<a href="index.php">skjemaet ditt</a>.
@@ -28,29 +28,12 @@ jQuery('#generateButtonContainer').hide();
                 Velg ut overskriften du vil ha svarene på, og lagre dette som mal.
 		        Neste gang du skal ha samme rapport, trykker du "Åpne mal". 
                 Sånn kan du enkelt hente ut alle svar, f.eks fra overskriften 
-                "{{ arrangement.getSkjema().getAntallOverskrifter() > 0 ? random(arrangement.getSkjema().getOverskrifter()).getTittel() : 'Reise'}}"
+                "{{ skjema.getOverskrifter().getAntall() > 0 ? random(skjema.getOverskrifter().getAll()).getTittel() : 'Reise'}}"
                 som en egen rapport.
 			</p>
             </div>
         </div>
     </div>
 
-    <div class="row">
-        {% for gruppe in arrangement.getSkjema().getSporsmalGruppertPerOverskrift() %}
-            <div class="col-12 col-sm-6 col-md-4">
-                {% embed "toggle.html.twig" with {id: 'vis_gruppe_'~gruppe.getId(), title: gruppe.getOverskrift(), start: 'yes' } %}
-                    {% block yes %}
-                        {% for sporsmal in gruppe.getAll() %}
-                            {% include "checkbox.html.twig" with {id: 'sporsmal_'~sporsmal.getId(), title: sporsmal.getTittel()} %}
-                        {% else %}
-                            <li class="list-group-item">Det er ingen spørsmål under denne overskriften</li>
-                        {% endfor %}
-                        {% if gruppe.getAll()|length > 0 %}
-                            {% include "options.html.twig" with {id: 'gruppe_'~gruppe.getId()~'_visning', title: 'Velg visning', start: 'tabell', options: [{id: 'liste', title: 'Liste'},{id: 'tabell', title: 'Tabell'}]} %}
-                        {% endif %}
-                    {% endblock %}
-                {% endembed %}
-            </div>
-        {% endfor %}
-    </div>
+    {% include "Skjema/tilpass.html.twig" %}
 {% endif %}
