--- a/twig/Skjema/rapport.html.twig
+++ b/twig/Skjema/rapport.html.twig
@@ -34,7 +34,7 @@
                 <h5 class="mb-0 mt-4">{{sporsmal.getTittel()}}</h5>
                 <table class="table table-striped">
                     <tr>
-                        <th>Avsender</th>
+                        <th width="30%">Avsender</th>
                         <th>Svar</th>
                     </tr>
                     {% for respondent in skjema.getRespondenter().getAll() %}
