Kan ikke sende sms fra user admin
Fordi vi har ikke tilgang på sms-modulen her...

Revert fix #115

--- a/twig/Lokalkontakter/rapport.html.twig
+++ b/twig/Lokalkontakter/rapport.html.twig
@@ -22,7 +22,7 @@
 				<td>{{admin.getNavn()}}</td>
 				{% if config.vis('mobil') %}
 					<td>
-						{% include "Components/mobil.html.twig" with {mobil: admin.getMobil()} %}
+						{{admin.getMobil()}}
 					</td>
 				{% endif %}
 				{% if config.vis('epost') %}
