Vis mobilnummer og e-post på jobbeMed-innslag
close #105

--- a/twig/Components/Innslag/element.html.twig
+++ b/twig/Components/Innslag/element.html.twig
@@ -85,10 +85,10 @@
 				{# implisitt: and innslag.getType().erEnkeltperson() #}
 				<tr>
 					<td>
-						{% if config.show('deltakere_mobil') or (config.show('kontaktperson') and config.show('kontakt_mobil') ) %}
+						{% if config.show('deltakere_mobil') or config.show('kontakt_mobil') %}
 							{% include "Components/mobil.html.twig" with {mobil: innslag.getPersoner().getSingle().getMobil(), navn: innslag.getPersoner().getSingle().getNavn()} %}
 						{% endif %}
-						{% if config.show('kontaktperson') and config.show('kontakt_epost') %}
+						{% if config.show('deltakere_epost') or config.show('kontakt_epost') %}
 							-
 							{% include "Components/epost.html.twig" with {epost: innslag.getPersoner().getSingle().getEpost() } %}
 						{% endif %}
