--- a/twig/Components/Innslag/Personer/rad.html.twig
+++ b/twig/Components/Innslag/Personer/rad.html.twig
@@ -4,15 +4,15 @@
     <{{ erKontakt ? 'th' : 'td'}} width="*%">
         {{person.getNavn() }}
     </{{ erKontakt ? 'th' : 'td'}}>
-    {% if config.show('deltakere_mobil') or ( config.show('kontaktperson') and config.show('kontakt_mobil') ) %}
+    {% if config.show(selector~'_mobil') or config.show(selector~'_epost') %}
         <td width="90">
             {% if config.show(selector~'_mobil') %}
                 {% include "Components/mobil.html.twig" with {mobil: person.getMobil(), navn:person.getNavn()} %}
-                {% if config.show(selector~'_epost') and person.getEpost() is not empty %}
-                    {% include "Components/epost.html.twig" with {epost: person.getEpost() } %}
-                {% endif %}
             {% else %}
                 &nbsp;
+            {% endif %}
+            {% if config.show(selector~'_epost') and person.getEpost() is not empty %}
+                {% include "Components/epost.html.twig" with {epost: person.getEpost() } %}
             {% endif %}
         </td>
     {% endif %}
