--- a/twig/Arrangementifylke/tilpass.html.twig
+++ b/twig/Arrangementifylke/tilpass.html.twig
@@ -24,6 +24,18 @@
 			{% endembed %}
 		</div>
 	{% endfor %}
+
+	<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+		{% embed "toggle.html.twig" with {id: 'vis_kunn_kommende_arrangement', title: 'Vis kun kommende arrangemet', start: 'yes' } %}
+			{% block no %}
+				{% include "checkbox.html.twig" with {id: 'vis_kommende', title: 'Kommende'} %}
+				{% for sessong in rapport.getSessongArr(2019) %}
+					{% include "checkbox.html.twig" with {id: 'vis_sessong'~ sessong, title: sessong} %}
+				{% endfor %}
+			{% endblock %}
+		{% endembed %}
+	</div>
+
 </div>
 
 <div class="row mt-5">
