Change requests punkt 1 og 2
- Float right for ferdig header
- Flytter boksen "Vis kun kommende arrangement" på starten

--- a/twig/Arrangementifylke/rapport.html.twig
+++ b/twig/Arrangementifylke/rapport.html.twig
@@ -14,7 +14,7 @@
 		{% endif %}
 
 		{% if config.vis('ferdig') %}
-		<th>Ferdig</th>
+		<th style="text-align:right;">Ferdig</th>
 		{% endif %}
 
 		{% if config.vis('arrangement') %}
