Sorterer arrangementer uten kommuner
Ny metode for sortering og n
en metode for flat liste er implementer.

--- a/twig/Arrangementifylke/arrangement.html.twig
+++ b/twig/Arrangementifylke/arrangement.html.twig
@@ -1,6 +1,10 @@
 <tr>
     {% if config.vis('kommune') %}
-    <td>{{kommune['kommune'].getNavn() }}</td>
+        <td>
+        {% for kom in kommuner %}
+            <span>{{ kom }}</span>
+        {% endfor %}
+        </td>
     {% endif %}
 
     {% if config.vis('start') %}
