Tilpasser gammel funksjonalitet med nye funksjoner
Utviklingstid for change requests: 10 timer

--- a/twig/Arrangementifylke/rapport.html.twig
+++ b/twig/Arrangementifylke/rapport.html.twig
@@ -30,23 +30,48 @@
 		{% endif %}
 	</tr>
 
+	{% if config.get('sortering') != 'start_dato' %}
 	
-	{% for arrangement in arrangementer %}
-		
-		{% if (config.vis('kunn_kommende_arrangement'))  %} 
-			{% if arrangement.start > tidNaa %}
-				{% include "Arrangementifylke/arrangement.html.twig" with {'arrangement': arrangement, 'kommuner': arrangement.getKommuner().getAll(), 'config': config} %}
-			{% endif %}
-		{% else %}
-			{% if config.vis('vis_kommende') and arrangement.start > tidNaa %}
-				{% include "Arrangementifylke/arrangement.html.twig" with {'arrangement': arrangement, 'kommuner': arrangement.getKommuner().getAll(), 'config': config} %}
-			
-			{% elseif config.vis("vis_sessong#{arrangement.getSesong()}") %}
-				{% include "Arrangementifylke/arrangement.html.twig" with {'arrangement': arrangement, 'kommuner': arrangement.getKommuner().getAll(), 'config': config} %}
-			{% endif %}
-		{% endif %}
+		{% for kommune in kommuner %}
 
-	{% endfor %}
+			{% for arrangement in kommune['arrangementer'] %}
+			
+			{% if (config.vis('kunn_kommende_arrangement'))  %} 
+				{% if arrangement.start > tidNaa %}
+					{% include "Arrangementifylke/arrangement.html.twig" with {'arrangement': arrangement, 'kommuner': arrangement.getKommuner().getAll(), 'config': config} %}
+				{% endif %}
+			{% else %}
+				{% if config.vis('vis_kommende') and arrangement.start > tidNaa %}
+					{% include "Arrangementifylke/arrangement.html.twig" with {'arrangement': arrangement, 'kommuner': arrangement.getKommuner().getAll(), 'config': config} %}
+				
+				{% elseif config.vis("vis_sessong#{arrangement.getSesong()}") %}
+					{% include "Arrangementifylke/arrangement.html.twig" with {'arrangement': arrangement, 'kommuner': arrangement.getKommuner().getAll(), 'config': config} %}
+				{% endif %}
+			{% endif %}
+
+			{% endfor %}
+		{% endfor %}
+	
+	{% else %}
+		
+		{% for arrangement in arrangementer %}
+			
+			{% if (config.vis('kunn_kommende_arrangement'))  %} 
+				{% if arrangement.start > tidNaa %}
+					{% include "Arrangementifylke/arrangement.html.twig" with {'arrangement': arrangement, 'kommuner': arrangement.getKommuner().getAll(), 'config': config} %}
+				{% endif %}
+			{% else %}
+				{% if config.vis('vis_kommende') and arrangement.start > tidNaa %}
+					{% include "Arrangementifylke/arrangement.html.twig" with {'arrangement': arrangement, 'kommuner': arrangement.getKommuner().getAll(), 'config': config} %}
+				
+				{% elseif config.vis("vis_sessong#{arrangement.getSesong()}") %}
+					{% include "Arrangementifylke/arrangement.html.twig" with {'arrangement': arrangement, 'kommuner': arrangement.getKommuner().getAll(), 'config': config} %}
+				{% endif %}
+			{% endif %}
+
+		{% endfor %}
+
+	{% endif %}
 </table>
 
 
@@ -73,3 +98,5 @@
 {% if utenArrangmenet == false %}
 <script>jQuery('#utenArrTitle').detach()</script>
 {% endif %}
+
+
