--- a/twig/Arrangementifylke/tilpass.html.twig
+++ b/twig/Arrangementifylke/tilpass.html.twig
@@ -4,7 +4,7 @@
 		{% embed "toggle.html.twig" with {id: 'vis_kunn_kommende_arrangement', title: 'Vis kun kommende arrangement', start: 'yes' } %}
 			{% block no %}
 				{% include "checkbox.html.twig" with {id: 'vis_kommende', title: 'Kommende'} %}
-				{% for sessong in rapport.getSessongArr(2019) %}
+				{% for sessong in rapport.getSessongArr(2002) %}
 					{% include "checkbox.html.twig" with {id: 'vis_sessong'~ sessong, title: sessong} %}
 				{% endfor %}
 			{% endblock %}
@@ -43,8 +43,9 @@
 	<div class="col-xs-12">
 		{% embed "preview/list.html.twig" with {id: 'sortering', title: 'Hvordan skal det sorteres?' } %}
 			{% block options %}
-				{% include "preview/option.html.twig" with {id: 'sortering', val: 'alfabetisk', title: 'Alfabetisk sortert', selected:true} %}
-				{% include "preview/option.html.twig" with {id: 'sortering', val: 'start_dato', title: 'Sorter arrangement etter start dato'} %}
+				{% include "preview/option.html.twig" with {id: 'sortering', val: 'alfabetisk', title: 'Alfabetisk sortert'} %}
+				{% include "preview/option.html.twig" with {id: 'sortering', val: 'start_dato', title: 'Sorter arrangement etter start dato', selected:true} %}
+				{% include "preview/option.html.twig" with {id: 'sortering', val: 'dato_innad_kommune', title: 'Sortert på dato, innad i kommunen'} %}
 			{% endblock %}
 
 			{% block previews %}
@@ -61,6 +62,16 @@
 
 				{% embed "preview/preview.html.twig" with {id: 'start_dato'} %}
 					{% block content %}
+						Arrangement   -  <b>10. feb 2020</b><br/>
+						Arrangement   -  <b>11. feb 2021</b><br/>
+						Arrangement   -  <b>12. feb 2021</b><br/>
+						Arrangement   -  <b>13. feb 2022</b><br/>
+						Arrangement   -  <b>14. feb 2022</b>
+					{% endblock %}
+				{% endembed %}
+
+				{% embed "preview/preview.html.twig" with {id: 'dato_innad_kommune'} %}
+					{% block content %}
 						Kommune A:<br>
 						&nbsp;&nbsp;&nbsp;Arrangement   -  <b>10. feb 2020</b><br/>
 						&nbsp;&nbsp;&nbsp;Arrangement   -  <b>11. feb 2021</b><br/>
@@ -70,6 +81,7 @@
 						&nbsp;&nbsp;&nbsp;Arrangement   -  <b>14. feb 2021</b>
 					{% endblock %}
 				{% endembed %}
+
 			{% endblock %}
 		{% endembed %}
 	</div>
