--- a/twig/Components/checkbox.html.twig
+++ b/twig/Components/checkbox.html.twig
@@ -3,7 +3,7 @@
         <div class="pull-right float-right label label-info small">{{ label }}</div>
     {% endif %}
     <label>
-        <input type="checkbox" class="form-group" name="vis_{{ id }}" id="vis_{{ id }}" value="true"/>
+        <input type="checkbox" class="form-group" name="vis_{{ id }}" id="vis_{{ id }}" value="true" {{ valgt == true ? 'checked' : '' }}/>
         {{ title }}
     </label>
     <div class="clearfix"></div>
