--- a/twig/rapport.html.twig
+++ b/twig/rapport.html.twig
@@ -2,12 +2,32 @@
     class="container-fluid" id="reportLoader" style="display:none;" data-id="{{rapport.getId()}}">
     {# OVERSKRIFT #}
     <div class="row">
-        <div class="col-12 col-sm-12">
+        <div class="col-12 col-sm-12" style="margin-bottom: 15px">
             <h2 id="customizeHeader">
                 Tilpass rapporten
-                <small>eller</small>
-                <button type="button" class="btn btn-default btn-sm showTemplatePicker">Åpne mal</button>
             </h2>
+
+            <span id="customizeHeader">
+                Vis rapport fra mal: 
+            </span>
+                {% if templates|length < 5 %}
+                    {% for template in templates %}
+                        <button type="button" data-id="{{template.id}}" class="btn btn-default btn-sm template-button" style="margin: 0 10px 0 0">
+                            {{ template.name }}
+                        </button>
+                    {% endfor %}
+                {% else %}
+                    <select id="malSelect" >
+                        <option value="null" disabled selected>Velg mal</option>
+                     {% for template in templates %}
+                        <option type="button" value="{{template.id}}">
+                            {{ template.name }}
+                        </option>
+                    {% endfor %}
+                    </select>
+                    <button id="apenMalSelect" class="btn btn-default btn-sm">Vis rapport</button>
+                {% endif %}
+            
             <h2 id="templateHeader" style="display:none;">
                 Åpne mal
                 <small>eller</small>
@@ -24,8 +44,8 @@
         </form>
         <div class="row">
             <div class="col-12 col-sm-12" id="generateButtonContainer">
-                <button type="button" class="btn btn-primary btn-lg generateReport">Generer rapport</button>
-                <button type="button" class="btn btn-default saveAsTemplate" style="margin-left: 2em;">lagre som mal</button>
+                <button type="button" class="btn btn-success btn-lg generateReport">Generer rapport</button>
+                <button type="button" class="btn btn-primary saveAsTemplate" style="margin-left: 2em;">lagre som mal</button>
             </div>
         </div>
     </div>
