--- a/twig/Nominasjoner/rapport.html.twig
+++ b/twig/Nominasjoner/rapport.html.twig
@@ -4,11 +4,11 @@
 		<table class="table">
 						<thead>
 							<tr>
-								<th>Navn</th>
-								<th>Status</th>
-								<th>Fylke</th>
-								<th>Skjema voksen</th>
-								<th>Skjema ungdom</th>
+								<th width="*%">Navn</th>
+								<th width="250">Status</th>
+								<th width="250">Avsender</th>
+								<th width="200">Skjema voksen</th>
+								<th width="200">Skjema ungdom</th>
 							</tr>
 						</thead>
 						
@@ -17,31 +17,26 @@
 		{% for innslag in fra.getInnslag().getAllByType(type) %}
 			{% set nominert = innslag.getNominasjoner().harTil(til.getId()) %}
 			{% set nominasjon = nominert ? innslag.getNominasjoner().getTil(til.getId()) : false %}
-			{% set person = innslag.getPersoner().getSingle() %}
-			{% set fylke = innslag.getFylke() %}
 
-				{% if nominasjon.erNominert %}
-
+				{% if nominasjon.erNominert() %}
 								<tr>
-									<td class="voksen-navn">{{ nominasjon.voksen.getNavn() }}</td>
+									<td class="voksen-navn">{{ innslag.getNavn() }}</td>
 									<td>
-										{% if nominert.erVideresendtTil( festivalen ) %}
-											<div class="dashicons dashicons-yes-alt yes" width="16"></div>
+										{% if innslag.erVideresendtTil( til ) %}
+											<div class="dashicons dashicons-warning yes" width="16"></div>
 											<span class="dashicon">Videresendt</span>
-										{% elseif nominasjon.erNominert() %}
-											<div class="dashicons dashicons-yes-alt yes" width="16"></div>
-											<span class="dashicon">Nominert</span>
 										{% else %}
 											{% if nominasjon.harVoksenSkjema() and nominasjon.harDeltakerskjema() %}
-												<div class="dashicons dashicons-yes-alt no"></div>
+												<div class="dashicons dashicons-yes-alt yes"></div>
+												Nominert
 											{% else %}
-												<div class="dashicons dashicons-yes-alt no"></div>
+												<div class="dashicons dashicons-no-alt no"></div>
+												Nominert, men mangler skjema
 											{% endif %}
-											Ikke nominert
 										{% endif %}
 									</td>
 									<td>
-										{{ fylke.getNavn() }}
+										{{ nominasjon.getFraArrangement().getNavn() }}
 									</td>
 									<td class="text-{{ nominasjon.harVoksenskjema() ? 'success' : 'error' }}">
 										Har {{ not nominasjon.harVoksenskjema() ? 'ikke' }} voksenskjema
@@ -55,13 +50,13 @@
 		{% endfor %}
 		
 	{% else %}
-			<p class="mute">Ingen nominsasjon</p>
+			<p class="mute">Ingen nominasjon</p>
 	{% endfor %}
 		</tbody>
 	</table>
 	
 {% else %}
-	<p class="mute">Ingen nominsasjon</p>
+	<p class="mute">Ingen nominasjon</p>
 {% endfor %}
 
 
@@ -71,7 +66,7 @@
 		color: #3c763d;
 	}
 	.dashicons.no {
-		color: #b94a48;
+		color: #b94a48 !important;
 	}
 	span.dashicon {
 	    vertical-align: text-top;
